--- a/calcio3.html
+++ b/calcio3.html
@@ -58,7 +58,7 @@
 
             <ul class="link">
                 <li>
-                <a href="calcio.html">INTRODUZIONE</a>
+                <a href="index.html">INTRODUZIONE</a>
             </li>
                 <li><a href="calcio2.html">REGOLE</a> 
                 </li>
