--- a/calcio2.html
+++ b/calcio2.html
@@ -62,7 +62,7 @@
                </div>            
             <ul class="link">
                 <li>
-                <a href="calcio.html">INTRODUZIONE</a>
+                <a href="index.html">INTRODUZIONE</a>
                 </li>
                 <li>
                 <a href="calcio3.html">APPROFONDIMENTI</a>  
